# Webcam-Photo-Sharer

./: .gitignore  README.md  design.kv  fileshare.py  main.py  pyproject.toml  requirements.txt
captures/: capture.txt
